--- a/_config.yml
+++ b/_config.yml
@@ -279,6 +279,20 @@ compress_html:
   ignore:
     envs: development
 
+# Collections
+collections:
+  # recipes:
+  #   output: true
+  #   permalink: /:collection/:path/
+  # pets:
+  #   output: true
+  #   permalink: /:collection/:path/
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
+  aco:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -295,6 +309,8 @@ defaults:
       related: true
       sidebar:
         nav: "games"
+
+  # _pages
   - scope:
       path: ""
       type: pages
@@ -306,4 +322,22 @@ defaults:
       related: true
       sidebar:
         nav: "games"
+
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: false
+      share: true
+
+  # _aco
+  - scope:
+      path: ""
+      type: aco
+    values:
+      layout: single
+      author_profile: false
+      share: true
       
