--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,13 @@
 main:
   - title: "Quick-Start Guide"
     url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "Collections"
+    url: /collection-archive/
   - title: "Category"
     url: /categories/
   - title: "Home"
     url: /
+  
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
