콜렉션 타이틀 출력 수정 / 페이지 최상단 기능 추가

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,9 +22,9 @@ games:
   - title: Games
     children:
       - title: "Assassin's Creed: Odyssey"
-        url: /categories/#assassin-s-creed-odyssey
-      - title: "Structure"
-        url: /structure/
+        url: /collection-archive/#assassin-s-creed-odyssey
+      - title: "portfolio"
+        url: /collection-archive/#portfolio
       - title: "Installation"
         url: /installation/
       - title: "Upgrading"
