--- a/_config.yml
+++ b/_config.yml
@@ -106,9 +106,9 @@ analytics:
 
 # Site Author
 author:
-  name             : ""
+  name             : "김구리"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : ""
+  bio              : "라이트 컨텐츠를 하드하게!"
   #location         : "Somewhere"
   email            :
   links:
@@ -281,15 +281,9 @@ compress_html:
 
 # Collections
 collections:
-  # recipes:
+  # portfolio:
   #   output: true
   #   permalink: /:collection/:path/
-  # pets:
-  #   output: true
-  #   permalink: /:collection/:path/
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
   aco:
     output: true
     permalink: /:collection/:path/
@@ -302,13 +296,13 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: false
+      author_profile: true
       read_time: true
       comments: # true
       share: true
       related: true
       sidebar:
-        nav: "games"
+        nav: "menu"
 
   # _pages
   - scope:
@@ -316,28 +310,22 @@ defaults:
       type: pages
     values:
       layout: single
+      author_profile: true
       read_time: true
       comments: # true
       share: true
       related: true
       sidebar:
-        nav: "games"
+        nav: "menu"
 
-  # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: false
-      share: true
-
-  # _aco
+  # _aco : _aco 폴더 내 파일들 전체 적용
   - scope:
       path: ""
       type: aco
     values:
       layout: single
-      author_profile: false
-      share: true
+      author_profile: true
+      share: false
+      sidebar:
+        nav: "menu"
       
