190531 - 항해를 떠난 함선: 페이지, 사진 추가 - 배고픈 신들: 이미지 경로 변경 - 신들의 발자국: 변경중

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
     url: /about/
-  - title: "Collections"
-    url: /collection/
+  # - title: "Collections"
+  #   url: /collection/
   # - title: "Category"
   #   url: /categories/
   - title: "Home"
