코멘트 추가

--- a/_config.yml
+++ b/_config.yml
@@ -325,6 +325,8 @@ defaults:
     values:
       layout: single
       author_profile: true
+      elated: true
+      comments: true
       share: false
       sidebar:
         nav: "menu"
