--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ masthead_title           : # overrides the website title displayed in the masthe
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
-  provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
+  provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
-    shortname            : # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : "kimguri" # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -287,6 +287,7 @@ collections:
   aco:
     output: true
     permalink: /:collection/:path/
+    comments: true
 
 # Defaults
 defaults:
@@ -298,7 +299,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
       sidebar:
@@ -312,7 +313,6 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
       share: true
       related: true
       sidebar:
@@ -325,9 +325,9 @@ defaults:
     values:
       layout: single
       author_profile: true
-      elated: true
-      comments: true
+      related: # true # 다른 추천글 출력
       share: false
+      comments: true
       sidebar:
         nav: "menu"
       
