--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,9 @@ main:
   #   url: /categories/
   - title: "Home"
     url: /
+
+  - title: page
+    url: /page/
   
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
