--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@ main:
   - title: "Home"
     url: /
 
-  - title: "Page"
-    url: /:filename
+  # - title: "Page"
+  #   url: /:filename
   
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
