--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : "김구리"
-  avatar           : "{{ site.baseurl }}/assets/images/avatar/profile.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/avatar/profile.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "라이트 컨텐츠를 하드하게!"
   #location         : "Somewhere"
   email            :
