--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "ko-KR" #"en-US"
+locale                   : "en-US" #"en-US"
 title                    : "김구리's Blog"
 title_separator          : "-"
 name                     : "김구리" # 페이지 하단 유저 이름 출력하는 곳 변경
