--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ reCaptcha:
   siteKey                :
   secret                 :
 atom_feed:
-  path                   : http://feed43.com/1635716083183300.xml # blank (default) uses feed.xml
+  path                   : https://feed43.com/1635716083183300.xml # blank (default) uses feed.xml
 search                   : # true, false (default)
 search_full_content      : # true, false (default)
 search_provider          : # lunr (default), algolia, google
@@ -229,9 +229,10 @@ plugins:
   - jekyll-paginate
   - jekyll-sitemap
   - jekyll-gist
-  #- jekyll-feed
+  - jekyll-feed
   - jemoji
   - jekyll-include-cache
+  - jekyll-seo-tag
 
 # mimic GitHub Pages with --safe
 whitelist:
